added css styling

--- a/src/style.css
+++ b/src/style.css
@@ -3,8 +3,8 @@ body {
 }
 
 .App {
-    display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     border: 2px solid red;
 }
